feat: added username when listing reviews